updates in prep for applications

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organisation under Professors Mert Demirer and Ben Vatter.</p>
+                <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organisation under Professors Mert Demirer and Ben Vatter.<br>
+                        I am interested in researching question in industrial organization and ecnometrics, particularly in the evaluation of <br>
+                        industrial policy and predictions in environments with uncertainty. 
+                </p>
 
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('Education')">Education</p>
@@ -94,17 +97,15 @@
                 <div class="tab-contents" id="Experience">
                     <ul>
                         <li><span>2023-Present</span><br>MIT Sloan<br>
-                            <span class="tab-subitem">Predoc</span></li>
-                        <li><span>2022</span><br>CME Group Inc.<br>
+                            <span class="tab-subitem">Predoc under Mert Demirer and Benjamin Vatter</span></li>
+                        <li><span>2022</span><br>CME Group Inc., Post-Trade and Optimization Services<br>
                             <span class="tab-subitem">Quant Risk Management & Clearing Intern</span></li>
-                        <li><span>2022</span><br>Remote<br>
-                            <span class="tab-subitem">Research Assistant for Stephane Mechoulan/Yujung Hwang</span></li>
-                        <li><span>2021-2022</span><br>Remote<br>
+                        <li><span>2022</span><br>Department of Economics, Dalhousie University/Johns Hopkins University<br>
+                            <span class="tab-subitem">Research Assistant to Stephane Mechoulan(DU) and Yujung Hwang (JHU)</span></li>
+                        <li><span>2021-2022</span><br>Mercatus Center, George Mason University<br>
                             <span class="tab-subitem">Don Lavoie Fellow</span></li>
-                        <li><span>2020-2022</span><br>Northwestern University, Dept. of Economics<br>
-                            <span class="tab-subitem"> Research Assistant for Gaston Illanes/Vivek Bhattacharya</span></li>
-                        <li><span>2021</span><br>Baker Program for Undergraduate Research<br>
-                            <span class="tab-subitem">Advised by Vivek Bhattacharya/Marciano Siniscalchi</span></li>
+                        <li><span>2020-2022</span><br>Department of Economics, Northwestern University<br>
+                            <span class="tab-subitem"> Research Assistant to Vivek Bhattacharya and  Gaston Illanes</span></li>
                         <li><span>2019-2020</span><br>Sibel Health<br>
                             <span class="tab-subitem">Manufacturing Technician</span></li>
                         <li><span>2019-2020</span><br>Simpson-Querrey Institute for Bio-integrated Electronics<br>
@@ -123,8 +124,6 @@
                             <span class="tab-subitem">Descriptives</span></li>
                         <li><span>LaTeX</span><br>
                             <span class="tab-subitem">Technical Writing</span></li>
-                        <!-- <li><span>Microsoft Excel</span><br>
-                            <span class="tab-subitem">Data Processing/Visualization</li> -->
                         <li><span>HTML, CSS, JS</span><br> 
                             <span class="tab-subitem">This Website</span></li>
                     </ul>
@@ -156,23 +155,23 @@
                 <img src="images/papers/demarcation.png">
                 <div class="layer">
                     <h3>Demarcation</h3>
-                    <p>My senior thesis discussing when an economic theory is testable.</p>
-                    <a href="https://drive.google.com/file/d/1J-HLnurkB4ZEhGcBv_Lhzu1f6YTArejz/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
+                    <p>My senior economics thesis discussing testability.</p>
+                    <a href="https://drive.google.com/file/d/1RkVZJIFkT-3pMwm5dsoWkAjK7MUn_yTg/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/papers/slave_prices.png">
                 <div class="layer">
-                    <h3>What was the Price of Slaves in Ancient Rome?</h3>
-                    <p>Regression analysis for ancient economic data</p>
-                    <a href="https://drive.google.com/file/d/1_rRIIkDGIBbMW2dig3_PMMtTGtlfrNfm/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
+                    <h3>What were the Price of Slaves in Ancient Rome?</h3>
+                    <p>A methodological perspective on ancient economic data</p>
+                    <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/papers/other.png">
                 <div class="layer">
                     <h3>Ideas</h3>
-                    <p>Current ideas and projects</p>
+                    <p>Prospective settings for research</p>
                     <a href="pages/projects"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
