--- a/pages/notes.html
+++ b/pages/notes.html
@@ -27,11 +27,11 @@
     </div>
 
     <div class="page-descr">
-        These are some of the best notes that I have used for learning various topics. 
+        These are notes that I have think are great for self-learning various topics. 
         <br><br>
-        Even though they are all available online, there is little chance you'd have come across them unless you scoured these writers' websites or 
-        took one of their classes. There are many lecture notes online (especially in math), so I am attempting to reserve this page for notes that 
-        I have used, and that I found to be very user-friendly.
+        Even though they are all available online, there is little chance you'd have come across them by accident. 
+        There are many lecture notes online (especially in math), so I am attempting to reserve this page for notes 
+        that I have used, and that I found to be very user-friendly.
     </div>
 
     <div class="works-container">
