--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,7 +28,7 @@
     </div>
     <div class="page-descr">
         I am <span>not</span> a trained economist, but below are some notes on some 
-        topics that interest me. All comments are welcome. 
+        topics that interest me. I appreciate any and all literature recommendations.
     </div>
     <div class="subtitle">
         Projects with Drafts
@@ -37,39 +37,35 @@
         <h1></h1>
             <ul>
                 <li class="project-title-link">
-                    <a href="https://drive.google.com/file/d/1J-HLnurkB4ZEhGcBv_Lhzu1f6YTArejz/view?usp=sharing">
+                    <a href="https://drive.google.com/file/d/1RkVZJIFkT-3pMwm5dsoWkAjK7MUn_yTg/view?usp=drive_link">
                         Demarcation</a>
                         <p>
-                            I argue that in the social sciences, the effect of a theory becoming 
-                            known by the agents it purports to describe amounts to a problem of 
-                            selection- not on the data which one might test the theory against,
-                            but on the process governing the generation of any possible data. Under
-                            this interpretation, it becomes unclear when one should regard a 
-                            social or economic theory as <span>testable</span>. I propose a 
-                            criterion for classifying testable social and economic theories
-                            as an extension of Karl Popper's answer to the <span> Problem of Demarcation.</span>
+                            Theories may be informative to agents. When agents' actions are determined by the predictions of a
+                            theory, the predictions endogenize the data that they are tested against. In this case, it is unclear
+                            in what manner these theories can be regarded as scientific. I characterize this problem in a general
+                            framework, and state an idealized criterion for theory selection. I then informally suggest the application
+                            of this framework in the analysis of various settings. 
                         </p></li>
                 <li class="project-title-link">
-                    <a href="https://drive.google.com/file/d/1_rRIIkDGIBbMW2dig3_PMMtTGtlfrNfm/view?usp=sharing">
+                    <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing">
                         What was the Price of Slaves in Ancient Rome?</a>
                         <p>
                             The paucity of numerical data need not result in scholars implementing
                             <span>ad hoc</span> empirical methods in their study of ancient economies. 
-                            Using the method of <span> partial identification</span>, I give an example 
-                            of how regression analysis may be implemented in the study of ancient economies, 
-                            and show that this method allows scholars to explicitly demonstrate the effect 
-                            on their conclusions of their assumptions regarding the representativeness 
-                            of archeological evidence.  
+                            Using the method of partial identification, I give an example 
+                            of how formal econometric analysis may be implemented in the study of ancient economies, 
+                            and show that this method allows scholars to explicitly demonstrate the effect on analysis 
+                            of their beliefs regarding the representativeness of archeological evidence.
                         </p></li>
                         <li class="project-title-link">
-                <a href="#">
+                <!-- <a href="#">
                     Algorithms for Predicting the Outcomes of Over-Under Wagers</a>
                     <p>
                         <span>(website coming soon)</span> A.J. Hesby and I are developing a code base for fine-tuning 
                         predictive models of Over-Under wagers. We are also working on developing a website containing full
                         code documentation and comprehensive discussions on the construction and implementation of our 
                         models. 
-                    </p></li>
+                    </p></li> -->
             </ul>
     </div>
     <div class="subtitle">
@@ -79,33 +75,71 @@
         <h1></h1>
             <ul>
                 <li class="project-title-link">
-                    Does the Fed affect Tactit Collusion?
+                    Does the Fed affect Tacit Collusion?
                         <p>
                             The basic theory of oligopolistic competition implies that a firm's decision to 
-                            maintain tacit collusion is a function of the risk free rate. I study the connection
-                            between a central banks influence over interest rates and the incidence of tacit 
-                            collusion across an economy.
+                            maintain tacit collusion is a function of their discount rate, which governs their sensitivity
+                            to changes future payoffs. In basic models of firm payoffs, the discount rate is 
+                            determined by the risk free rate of interest. Central banks can influence this rate through monetary
+                            policy. I am interested in analyzing the relationship between montetary policy and the incidence of tacit 
+                            collusion across an economy. Rotemberg and Saloner (1986) analyze the changes in firms' ability 
+                            to maintain collusion in the precense of "booms." Dal Bo (2007) analyzes tacit collusion under 
+                            randomly fluctuating discount rates. My plan would be to sythesize these frameworks: analyze the affect on 
+                            tacit collusion through flucuation of discount rates as inlfuenced by changes in demand. 
+                            Empirically, I am interested in characterizing "bounds" on the linkage between monetary policy and 
+                            competition in partial equilibrium. 
                         </p></li>
+                    <li class="project-title-link">
+                        Evaluation or Persuasion in Industrial Policy?
+                            <p>
+                              Central banks are faced with the decision of acting as if they do or don't influence their 
+                              intended outcomes by pertubring the expectation of a representative agent. On the other hand,
+                              judges determine, case-by-case, whether their actions are likely to influence the subsequent 
+                              behavior of specifc agents. I would like to explore to what extent antitrust regulators, like the 
+                              DOJ or FTC, stand to gain by pursuing policy like judges rather than central banks. Proposed 
+                              mergers may find a future collusive action potentially profitable. Regulators can merely evaluate 
+                              the competitive effects of mergers based on a model of structure and conduct, or they can persuade 
+                              these merger by recognizing their effect on firms' expected payoffs through their level of 
+                              antitrust stringency. One merger may be proposed because it believes antitrust enforcement to be lax, and 
+                              wants to 
+                              take advantage of this. Another may be proposed because it intends to realize 
+                              pro-competitve synergies. Regulators might benefit from first determining each proposed merger's type, i.e., 
+                              whether it should be evaluated or persuaded, and then what level of stringency they should exercise 
+                              conditional on this determination. I am 
+                              interested in modelling this policy rule, and determining a tractable method by which regulators may implement 
+                              it. Interesting questions I'd like to tackle pertain to the observables, outside of conventional level of 
+                              concentration, reveal proposed mergers' types. How can these observables be used in a tractable way? What solution 
+                              concept can be employed to ensure a regulator exercising judgement is not systematically biased?
+                            </p></li>
                 <li class="project-title-link">
                     Partially Idenitifying the Spillover Effects of Minimum Wage Policy
                         <p>
                             The direct effect of minimum wage policy on poverty and unemployment is controversial both 
-                            theoretically and empirically. I study whether minimum wage policy influences
-                            the structure of wages in the immediate neighborhood of a newly establsihed wage floor. 
-                            Once a new policy is established, changes in the structure around the new minimum are likely 
-                            to influence the propsective earnings of workers who were working at or near this wage level. 
-                            Hence, minium wage policy may have indirect effects on unemployment and poverty if it affects the 
-                            wage structure locally.  
+                            theoretically and empirically. The indirect effects may be even harder to pin down robustly, as 
+                            they can result from the idiosyncracies of particular labor markets. For example, if a worker 
+                            is receiving a wage below a prospective floor, that worker will likely receive some form of 
+                            increased compensation once the floor is imposed, or be dismissed. One interesting question 
+                            is how workers receiving a wage above (but close) to the new minimum are affected. One might 
+                            reason that these workers have similar skills to workers at the minimum, but benefitted from 
+                            frictions in the labor market (or by capitalizing on networks, etc). How is the mobility of 
+                            these workers affected? Does the friction shift with the newly imposed floor, or do firms 
+                            attempt to condense wages to the new minimum? Are these workers less able to leverage an 
+                            outside option in their wage negotiations as the distance of their wage to the minimum is 
+                            descread? Empirically, can one robustly identify a minimum 
+                            threshold for wage increases that predicts a mobility effect on these workers?
                         </p></li>
                 <li class="project-title-link">
                     Leveraging Uncertainty in Risk Management
                         <p>
                             Many models of risk management utilize distributional assumptions on the risk associated with 
                             porfolios. In particular, FHVaR utilizes assumptions on the stability of the distribution of 
-                            returns over time. When these assumptions are relaxed, the VaR and resulting level of 
-                            margin to be allocated becomes uncertain. However, the determination of margin by risk managers
-                            based on an uncertain calculation of the FHVaR may actually benefit trading firms in the long run 
-                            depending on the decison rule used for allocating this margin.
+                            returns over time. When these assumptions are relaxed, the VaR and requisite level of 
+                            margin to protect against risk becomes uncertain. I would like to study whether the determination 
+                            of margin using rules from the theory of decision under uncertainty may acutally benefit trading 
+                            firms, and the extent of the sensitivity of market risk to these benefits. Intuitively, the distribution
+                            of required margin over a time-series under one set of assumptons on the evolution of market risk may not 
+                            completely overlap under a different set of market risk assumption. What gains can be made by relaxing these 
+                            assumption on market risk, and what cost does this entail for risk managers?
                         </p></li>
     </div>
 
