--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
                 <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organisation under Professors Mert Demirer and Ben Vatter.<br>
-                        I am interested in researching question in industrial organization and ecnometrics, particularly in the evaluation of <br>
-                        industrial policy and predictions in environments with uncertainty. 
+                        I am interested in researching question in industrial organization and econometrics, particularly in the determination <br> 
+                        and evaluation of industrial policy in environments with uncertainty. 
                 </p>
 
                 <div class="tab-titles">
