--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,7 +31,7 @@
         topics that interest me. I appreciate any and all literature recommendations.
     </div>
     <div class="subtitle">
-        Projects with Drafts
+        Ideas with Drafts
     </div>
     <div class="working-paper">
         <h1></h1>
@@ -69,7 +69,7 @@
             </ul>
     </div>
     <div class="subtitle">
-        Prospective Topics/Ruminations/Projects without Drafts
+        Prospective Topics/Ruminations/Ideas without Drafts
     </div>
     <div class="working-paper">
         <h1></h1>
@@ -112,7 +112,7 @@
                               concept can be employed to ensure a regulator exercising judgement is not systematically biased?
                             </p></li>
                 <li class="project-title-link">
-                    Partially Idenitifying the Spillover Effects of Minimum Wage Policy
+                    Idenitifying the Spillover Effects of Minimum Wage Policy
                         <p>
                             The direct effect of minimum wage policy on poverty and unemployment is controversial both 
                             theoretically and empirically. The indirect effects may be even harder to pin down robustly, as 
@@ -125,8 +125,8 @@
                             these workers affected? Does the friction shift with the newly imposed floor, or do firms 
                             attempt to condense wages to the new minimum? Are these workers less able to leverage an 
                             outside option in their wage negotiations as the distance of their wage to the minimum is 
-                            descread? Empirically, can one robustly identify a minimum 
-                            threshold for wage increases that predicts a mobility effect on these workers?
+                            decreased? Empirically, can one robustly identify a minimum 
+                            threshold for wage increases that predicts a spillover effect on mobility?
                         </p></li>
                 <li class="project-title-link">
                     Leveraging Uncertainty in Risk Management
@@ -137,9 +137,8 @@
                             margin to protect against risk becomes uncertain. I would like to study whether the determination 
                             of margin using rules from the theory of decision under uncertainty may acutally benefit trading 
                             firms, and the extent of the sensitivity of market risk to these benefits. Intuitively, the distribution
-                            of required margin over a time-series under one set of assumptons on the evolution of market risk may not 
-                            completely overlap under a different set of market risk assumption. What gains can be made by relaxing these 
-                            assumption on market risk, and what cost does this entail for risk managers?
+                            of required margin over a time-series may not be the same acorss all assumed distribution of market risk.
+                             What gains can be made by relaxing these assumption on market risk, and what cost does this entail for risk managers?
                         </p></li>
     </div>
 
