grammar this time

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="work">
                 <img src="images/papers/slave_prices.png">
                 <div class="layer">
-                    <h3>What were the Price of Slaves in Ancient Rome?</h3>
+                    <h3>What was the Price of Slaves in Ancient Rome?</h3>
                     <p>A methodological perspective on ancient economic data</p>
                     <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
                 </div>
