fixed bio spacing

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organization under Professors Mert Demirer and Ben Vatter.<br>
-                        I am interested in researching question in industrial organization and econometrics, particularly in the determination <br> 
+                <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organization under Professors Mert Demirer and Ben Vatter.
+                        I am interested in researching question in industrial organization and econometrics, particularly in the design
                         and evaluation of industrial policy in environments with uncertainty. 
                 </p>
 
