typo in projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -83,7 +83,7 @@
                             determined by the risk free rate of interest. Central banks can influence this rate through monetary
                             policy. I am interested in analyzing the relationship between montetary policy and the incidence of tacit 
                             collusion across an economy. Rotemberg and Saloner (1986) analyze the changes in firms' ability 
-                            to maintain collusion in the precense of "booms." Dal Bo (2007) analyzes tacit collusion under 
+                            to maintain collusion in the presence of "booms." Dal Bo (2007) analyzes tacit collusion under 
                             randomly fluctuating discount rates. My plan would be to sythesize these frameworks: analyze the affect on 
                             tacit collusion through flucuation of discount rates as inlfuenced by changes in demand. 
                             Empirically, I am interested in characterizing "bounds" on the linkage between monetary policy and 
