--- a/pages/projects.html
+++ b/pages/projects.html
@@ -116,7 +116,7 @@
                         <p>
                             The direct effect of minimum wage policy on poverty and unemployment is controversial both 
                             theoretically and empirically. The indirect effects may be even harder to pin down robustly, as 
-                            they can result from the idiosyncracies of particular labor markets. For example, if a worker 
+                            they may especially be influenced by the idiosyncracies of particular labor markets. For example, if a worker 
                             is receiving a wage below a prospective floor, that worker will likely receive some form of 
                             increased compensation once the floor is imposed, or be dismissed. One interesting question 
                             is how workers receiving a wage above (but close) to the new minimum are affected. One might 
