--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,7 +79,7 @@
                         <p>
                             The basic theory of oligopolistic competition implies that a firm's decision to 
                             maintain tacit collusion is a function of their discount rate, which governs their sensitivity
-                            to changes future payoffs. In basic models of firm payoffs, the discount rate is 
+                            to changes future payoffs (Tirole, 1988). In basic models of firm payoffs, the discount rate is 
                             determined by the risk free rate of interest. Central banks can influence this rate through monetary
                             policy. I am interested in analyzing the relationship between montetary policy and the incidence of tacit 
                             collusion across an economy. Rotemberg and Saloner (1986) analyze the changes in firms' ability 
@@ -92,24 +92,25 @@
                     <li class="project-title-link">
                         Evaluation or Persuasion in Industrial Policy?
                             <p>
-                              Central banks are faced with the decision of acting as if they do or don't influence their 
-                              intended outcomes by pertubring the expectation of a representative agent. On the other hand,
-                              judges determine, case-by-case, whether their actions are likely to influence the subsequent 
-                              behavior of specifc agents. I would like to explore to what extent antitrust regulators, like the 
-                              DOJ or FTC, stand to gain by pursuing policy like judges rather than central banks. Proposed 
-                              mergers may find a future collusive action potentially profitable. Regulators can merely evaluate 
-                              the competitive effects of mergers based on a model of structure and conduct, or they can persuade 
-                              these merger by recognizing their effect on firms' expected payoffs through their level of 
-                              antitrust stringency. One merger may be proposed because it believes antitrust enforcement to be lax, and 
-                              wants to 
-                              take advantage of this. Another may be proposed because it intends to realize 
-                              pro-competitve synergies. Regulators might benefit from first determining each proposed merger's type, i.e., 
-                              whether it should be evaluated or persuaded, and then what level of stringency they should exercise 
-                              conditional on this determination. I am 
-                              interested in modelling this policy rule, and determining a tractable method by which regulators may implement 
-                              it. Interesting questions I'd like to tackle pertain to the observables, outside of conventional level of 
-                              concentration, reveal proposed mergers' types. How can these observables be used in a tractable way? What solution 
-                              concept can be employed to ensure a regulator exercising judgement is not systematically biased?
+                                Accurately determining whether an antitrust authority exercises a certain degree of stringency, such as
+                                being too lax or too strict, requires comparing the realized effects of a proposed merger with the
+                                regulator's beliefs about what they would be (Carlton, 2009). In this vein, Bhattacharya et al. (2023) argue
+                                that a modest increase in the stringency of antitrust enforcement would reduce prices in consumer packaged goods
+                                in the United States (US). Similarly, Brot-Goldberg et al. (2024) find that antitrust enforcement is relatively
+                                lax in the US hospital sector given what regulators <span>could have known</span> about the realized effects of mergers.
+                                In the US specifically, budgetary constraints or juridical partiality may make it challenging for a regulator to
+                                successfully block a merger that they expect to be anti-competitive Baer et al. (2020). Recognizing the potential
+                                benefits of increasing antitrust enforcement in the US and its concomitant challenges, how should a regulator decide
+                                the efficient level of stringency it is willing to exercise? 
+                            <br><br>
+                                I am interested in studying the choice of stringency level when 
+                                the regulator has an effect on the realization of merger outcomes in the event of an attemped block failing. In one case, 
+                                the regulator may be able to signal to a prospective merger that they will continue their scrutiny should a block fail, and
+                                thus attenuate the likelihood that a merger will be a "bad" type. In this setting, the regulator may find it optimal to focus on
+                                their capacity for <span>persuasion</span>.
+                                In another case, the likelihood that a merger will be a certain type 
+                                is a structural feature of the deal and independent of the regulator's signaled stringency. In this case, the regualtor might find
+                                it optimal to focus on the <span>evaluation</span> of the potential merger's effect. 
                             </p></li>
                 <li class="project-title-link">
                     Idenitifying the Spillover Effects of Minimum Wage Policy
