--- a/pages/projects.html
+++ b/pages/projects.html
@@ -138,7 +138,7 @@
                             margin to protect against risk becomes uncertain. I would like to study whether the determination 
                             of margin using rules from the theory of decision under uncertainty may acutally benefit trading 
                             firms, and the extent of the sensitivity of market risk to these benefits. Intuitively, the distribution
-                            of required margin over a time-series may not be the same acorss all assumed distributions of market risk.
+                            of required margin over a time-series may not be the same across all assumed distributions of market risk.
                              What gains can be made by relaxing these assumption on market risk, and what cost does this entail for risk managers?
                         </p></li>
     </div>
