updated merger review entry

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -92,25 +92,23 @@
                     <li class="project-title-link">
                         Evaluation or Persuasion in Industrial Policy?
                             <p>
-                                Accurately determining whether an antitrust authority exercises a certain degree of stringency, such as
-                                being too lax or too strict, requires comparing the realized effects of a proposed merger with the
-                                regulator's beliefs about what they would be (Carlton, 2009). In this vein, Bhattacharya et al. (2023) argue
-                                that a modest increase in the stringency of antitrust enforcement would reduce prices in consumer packaged goods
-                                in the United States (US). Similarly, Brot-Goldberg et al. (2024) find that antitrust enforcement is relatively
-                                lax in the US hospital sector given what regulators <span>could have known</span> about the realized effects of mergers.
-                                In the US specifically, budgetary constraints or juridical partiality may make it challenging for a regulator to
-                                successfully block a merger that they expect to be anti-competitive Baer et al. (2020). Recognizing the potential
-                                benefits of increasing antitrust enforcement in the US and its concomitant challenges, how should a regulator decide
-                                the efficient level of stringency it is willing to exercise? 
-                            <br><br>
-                                I am interested in studying the choice of stringency level when 
-                                the regulator has an effect on the realization of merger outcomes in the event of an attemped block failing. In one case, 
-                                the regulator may be able to signal to a prospective merger that they will continue their scrutiny should a block fail, and
-                                thus attenuate the likelihood that a merger will be a "bad" type. In this setting, the regulator may find it optimal to focus on
-                                their capacity for <span>persuasion</span>.
-                                In another case, the likelihood that a merger will be a certain type 
-                                is a structural feature of the deal and independent of the regulator's signaled stringency. In this case, the regualtor might find
-                                it optimal to focus on the <span>evaluation</span> of the potential merger's effect. 
+                                In the context of merger review, evaluating a regulator's stringency equates to retrospectively determining
+                                how well its behavior aligned with what would have been  an optimal enforcement criterion. As Carlton (2009) notes,
+                                determining the regulator's degree of stringency, like too lax or too strict, requires comparing the realized effects
+                                of proposed mergers with the the regulator's beliefs about what they would be at the time of the proposal's review.
+                                Recent retrospective evaluations of merger policy have adopted this perspective. 
+                                Bhattacharya et al. (2024) argue that a modest increase in stringency would have reduced prices in US consumer packaged
+                                goods. Similarly, Brot-Golderberg et al. (2024) find that antitrust enforcement is relatively lax in the US hospital
+                                sector given what regulators could have known about the realized effects of mergers. In the US specifically, 
+                                budgetary constraints or the biases of the judiciary may prevent regulators from committing to a certain degree of 
+                                stringency across merger proposals (Baer et al. 2020). Under these constraints, and recognizing that enforcement 
+                                has likely been too lax in the US within the last two decades, how can a regulator maintain an efficient level of stringency?
+                                <br><br>
+                                The merger review process in the United States enables regulators to extract information from firms pre-merger about their conduct 
+                                and the market that they operate in. Given that post-merger enforcement can be costly, and pre-merger challenges may fail, regulators 
+                                may be able to use merger reveiw to reduce the cost of enforcement ex-post by inducing firms to partially reveal their type through the information 
+                                that regualtors extract. Through this revelation, the regulator can credibly signal their willingness to pursue ex-post enforcement and thus 
+                                deter prospective mergers from engaging in in anti-competetive behavior. 
                             </p></li>
                 <li class="project-title-link">
                     Idenitifying the Spillover Effects of Minimum Wage Policy
